# prelevement-deau-airflow

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  database-description.mmd  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-prod.yml
alembic/: env.py
alembic/versions/: 0b63332a8d83_.py  0ba8f601851e_.py  14c947b4d8f8_.py  151830e21f48_.py  2db65b421b62_.py  46bce3f2f1e2_.py  47951e564f1b_.py  680800074590_.py  7385df688e7d_.py  81d6069e8d21_.py  944b3db2e00d_.py  a5b6baf1d3f6_.py  ad50a1777b40_.py  ae152d7b59a7_.py  b0cbb7dd97ef_.py  d35ec545c72b_.py  d63fdf68a0af_.py  d8a41ba6649a_.py  de7fc32e432c_.py
dags/: dag_collect_demarche_from_demandes_simplifiees.py  dag_empty_operator.py  dag_merge_demandes_simplifiees_to_historical_db.py  dag_public_bucket_acl.py
scripts/: check_requirements.sh
utils/common/: exceptions.py  logging.py  messages.py  object_storage_client.py  utils.py
utils/core/: settings.py  tools.py
utils/db/: base_class.py  init_db.py  models.py  session.py
utils/demandessimplifiees/: constant.py  models.py  schemas.py  services.py  tasks.py
utils/demandessimplifiees/gql_queries/: get_queries.gql
utils/demarchessimplifiees/: constant.py  models.py  schemas.py  services.py  tasks.py
utils/demarchessimplifiees/common/: constant.py  models.py  schemas.py  services.py
utils/demarchessimplifiees/data_extraction/: models.py  schemas.py  services.py  tasks.py
utils/donnees_historiques/: models.py  services.py  tasks.py
utils/public_bucket_acl/: tasks.py
(+14 files in other folders)
